@@ -365,6 +365,7 @@ void Preferences::reset() {
 	initial_deinterlace = MediaSettings::NoDeinterlace;
 
 	initial_audio_channels = MediaSettings::ChDefault;
+	initial_stereo_mode = MediaSettings::Stereo;
 
 	initial_audio_track = 1;
 	initial_subtitle_track = 1;
@@ -729,6 +730,7 @@ void Preferences::save() {
 	set->setValue("initial_deinterlace", initial_deinterlace);
 
 	set->setValue("initial_audio_channels", initial_audio_channels);
+	set->setValue("initial_stereo_mode", initial_stereo_mode);
 
 	set->setValue("initial_audio_track", initial_audio_track);
 	set->setValue("initial_subtitle_track", initial_subtitle_track);
@@ -1102,6 +1104,7 @@ void Preferences::load() {
 	initial_deinterlace = set->value("initial_deinterlace", initial_deinterlace).toInt();
 
 	initial_audio_channels = set->value("initial_audio_channels", initial_audio_channels).toInt();
+	initial_stereo_mode = set->value("initial_stereo_mode", initial_stereo_mode).toInt();
 
 	initial_audio_track = set->value("initial_audio_track", initial_audio_track).toInt();
 	initial_subtitle_track = set->value("initial_subtitle_track", initial_subtitle_track).toInt();
